🎨 you can know play

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -4,3 +4,5 @@ Password: Mot de passe
 Register: S'inscrire
 login.signin: Inscription
 login.login: Connexion
+login.registerBtn: Se créer un compte
+Login: Connexion
